assets/style/components/main/_nav.scss
.nav-main {
	height          : 60px;
    width           : 100%;
    background-color: white;
   
    @include breakpoint(large) {
        height: 100px;
    }

    #nav-state {
        display: none;
    }

    #nav-state:checked ~ .mobile .nav-toggle {
        position: fixed;
        
        b {
            background: transparent;
            
            &:before {
                transform: translate(0, 0) rotate(45deg);
            }
            
            &:after {
                transform: translate(0, 0) rotate(-45deg);
            }
        }
    }

    .mobile {
        height: 100%;
        padding: 0 $padding;
        
        @include flex;
        @include flex-align($x: space-between, $y: middle);

        @include breakpoint(large) {
            height: 0;
        }

        .title {
            display: block;
            text-align: center;
            
            @include breakpoint(large) {
                display: none;
            }
        }
    
        .nav-toggle {
            width: 26px;
            height: 20px;
            position: absolute;
            z-index: 3;
            cursor: pointer;
            padding: 9px 0;
            right: $padding;
            
            @include breakpoint(large) {
                display: none;
            }

            b {
                height: 2px;
                background: #ccc;
                display: block;
                position: relative;
                transition: background .2s;

                &:before, &:after {
                    content: "";
                    display: block;
                    position: absolute;
                    width: 100%;
                    height: 100%;
                    background: #ccc;
                    top: 0;
                    transform-origin: center center;
                    transform: translate(0, -9px);
                    transition: transform .4s ease;
                }
                &:after {
                    transform: translate(0, 9px);
                }
            }
        }
    }

    /*
    .nav-toggle {
        position: relative;
        z-index: 100;
        width         : auto;
        height        : $nav-height;
        padding       : ($nav-height - rem-calc(12)) / 2 $padding;
        cursor        : pointer;
        font-size     : rem-calc(12);
        font-weight   : $global-weight-bold;
        line-height   : 1;
        text-transform: uppercase;
        display       : block;
        
        @include breakpoint(large) {
            display: none;
        }

        b {
            @include hamburger();
            
            /*
            width         : 14px;
            height        : 2px;
            vertical-align: middle;
            margin-top    : -2px;
            margin-right  : 5px;
            background    : $dark-gray;
            display       : inline-block;
            position      : relative;
            
            &:before, &:after {
                display   : block;
                content   : "";
                width     : 100%;
                height    : 100%;
                position  : absolute;
                left      : 0;
                top       : -4px;
                background: inherit;
            }
            
            &:after {
                top: 4px;
            }* /
        }
    }*/

    #nav-state:checked ~ .menu {
        @include flex;
    }

    .menu {
        @include flex-grid-row();
        @include flex-direction(column);
        @include flex-align($x: space-between, $y: middle);

        padding: 2rem;
        display: none;
        position: fixed;
        background-color: #1e1e23;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;

        a {
            color: #ffffff;
        }

        nav {
            @include flex;
            @include flex-align($y: middle);
            @include flex-direction(column);
        }
        
        @include breakpoint(large) {
            @include flex;
            @include flex-direction(row);
            background: none;
            position: static;
            padding: 0 $padding;
            height: 100px;
            
            h2, a {
                color: #000000;
            }
                
            nav {
                @include flex-direction(row);
            }
        }

    }
}

